<resources>
    <string name="app_name">SamplePhoneStore</string>
    <string name="explorer">Explorer</string>
    <string name="bag">Bag</string>
    <string name="favorite">Favorite</string>
    <string name="user">User</string>
    <string name="tv_select_category">Select Category</string>
    <string name="tv_view_all">view all</string>
    <string name="search">Search</string>
    <string name="tv_hot_sales">Hot sales</string>
    <string name="tv_see_more">see more</string>
    <string name="tv_phone">Phone</string>
    <string name="tv_computer">Computer</string>
    <string name="tv_health">Health</string>
    <string name="tv_books">Books</string>
    <string name="tv_other">Other</string>
    <string name="btn_buy_now">Buy now!</string>
    <string name="tv_best_seller">Best seller</string>
    <string name="tv_filter_options">Filter options</string>
    <string name="btn_done">Done</string>
    <string name="tv_title_brand">Brand</string>
    <string name="tv_title_price">Price</string>
    <string name="tv_title_size">Size</string>
    <string name="btn_shop">Shop</string>
    <string name="btn_details">Details</string>
    <string name="btn_features">Features</string>
    <string name="tv_cpu">Exynos 990</string>
    <string name="tv_camera">108 + 12 mp</string>
    <string name="tv_ram">8 Gb</string>
    <string name="tv_sd">256 Gb</string>
    <string name="tv_select_color_and_capacity">Select color and capacity</string>
    <string name="btn_128_gb_on">128 GB</string>
    <string name="btn_128_gb_off">128 gb</string>
    <string name="btn_256_gb_on">256 GB</string>
    <string name="btn_256_gb_off">256 gb</string>
    <string name="tv_product_details">Product Details</string>
    <string name="tv_add_address">Add address</string>
    <string name="tv_my_cart">My Cart</string>
    <string name="btn_checkout">Checkout</string>
    <string name="tv_total">Total</string>
    <string name="tv_delivery">Delivery</string>
    <string name="tv_delivery_value">Free</string>
    <string name="tv_total_value">$6,000 us</string>
    <string name="btn_new">New</string>
    <string-array name="Geo_spinner">
        <item>Zihuatanejo, Gro</item>
        <item>New York, NY</item>
    </string-array>
    <string-array name="Brand_spinner">
        <item>Samsung</item>
        <item>Apple</item>
        <item>Xiaomi</item>
        <item>Motorola</item>
    </string-array>
    <string-array name="Price_spinner">
        <item>$0 - $300</item>
        <item>$301 - $500</item>
        <item>$501 - $1000</item>
        <item>$1001 - $2000</item>
    </string-array>
    <string-array name="Size_spinner">
        <item>4.5 to 5.5 inches</item>
        <item>5.6 to 6.5 inches</item>
    </string-array>
</resources>