<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_explorer"
        android:enabled="true"
        android:icon="@drawable/ic_dot_24"
        android:title="@string/explorer"/>

    <item
        android:id="@+id/bottom_bag"
        android:enabled="true"
        android:icon="@drawable/ic_bag_24"
        android:title="@string/bag"/>

    <item
        android:id="@+id/bottom_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/favorite"/>

    <item
        android:id="@+id/bottom_user"
        android:enabled="true"
        android:icon="@drawable/ic_user_24"
        android:title="@string/user"/>

</menu>