<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBox
        android:id="@+id/checkboxBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_quadro"
        android:button="@drawable/ic_back_arrow_16"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:text="@string/tv_add_address"
        android:textColor="@color/color_secondary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/checkboxCart"
        app:layout_constraintEnd_toStartOf="@+id/checkboxCart"
        app:layout_constraintTop_toTopOf="@+id/checkboxCart" />

    <CheckBox
        android:id="@+id/checkboxCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_quadro"
        android:button="@drawable/ic_geo_16"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTenPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMyCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/tv_my_cart"
        android:textColor="@color/color_secondary"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTenPercent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineThirtyPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="510dp"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineThirtyPercent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_secondary">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/viewTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerMyCart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="4dp"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.recyclerview.widget.RecyclerView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

            <View
                android:id="@+id/viewTop"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/tvTotal"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/tv_total"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/tvDelivery"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTotalValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="20dp"
                android:text="@string/tv_total_value"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvDeliveryValue"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/tv_delivery"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/viewBottom"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDeliveryValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/tv_delivery_value"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/viewBottom"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/viewBottom"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="30dp"
                android:background="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/btnCheckout"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCheckout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_new"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/btn_checkout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>