<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBox
        android:id="@+id/checkboxBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_quadro"
        android:button="@drawable/ic_back_arrow_16"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_product_details"
        android:textColor="@color/color_secondary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/checkboxBack"
        app:layout_constraintEnd_toStartOf="@+id/checkboxCart"
        app:layout_constraintStart_toEndOf="@+id/checkboxBack"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkboxCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_quadro"
        android:button="@drawable/ic_bag_16"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTenPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTenPercent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerProductDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineFiftyPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineFiftyPercent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhoneModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Samsung Note 20 Ultra"
                android:textColor="@color/color_secondary"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkboxFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_quadro"
                android:button="@drawable/ic_favorite_16"
                android:minWidth="40dp"
                android:minHeight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/iconFirstStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/sl_star_16"
                app:buttonTint="@color/color_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPhoneModel"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/iconSecondStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/sl_star_16"
                app:buttonTint="@color/color_primary"
                app:layout_constraintStart_toEndOf="@+id/iconFirstStar"
                app:layout_constraintTop_toBottomOf="@+id/tvPhoneModel"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/iconThirdStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/sl_star_16"
                app:buttonTint="@color/color_primary"
                app:layout_constraintStart_toEndOf="@+id/iconSecondStar"
                app:layout_constraintTop_toBottomOf="@+id/tvPhoneModel"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/iconFourthStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/sl_star_16"
                app:buttonTint="@color/color_primary"
                app:layout_constraintStart_toEndOf="@+id/iconThirdStar"
                app:layout_constraintTop_toBottomOf="@+id/tvPhoneModel"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/iconFifthStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/sl_star_16"
                app:buttonTint="@color/color_primary"
                app:layout_constraintStart_toEndOf="@+id/iconFourthStar"
                app:layout_constraintTop_toBottomOf="@+id/tvPhoneModel"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/textBtnShop"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_shop"
                android:textSize="20sp"
                android:textColor="@color/color_secondary"
                app:layout_constraintEnd_toStartOf="@+id/textBtnDetails"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iconFifthStar" />

            <Button
                android:id="@+id/textBtnDetails"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="50"
                android:text="@string/btn_details"
                android:textSize="20sp"
                android:textColor="@color/color_secondary"
                app:layout_constraintEnd_toStartOf="@+id/textBtnFeatures"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textBtnShop"
                app:layout_constraintTop_toBottomOf="@+id/iconFifthStar" />

            <Button
                android:id="@+id/textBtnFeatures"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="50"
                android:text="@string/btn_features"
                android:textSize="20sp"
                android:textColor="@color/color_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textBtnDetails"
                app:layout_constraintTop_toBottomOf="@+id/iconFifthStar" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCpu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cardCamera"
                app:layout_constraintTop_toBottomOf="@+id/textBtnShop"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_cpu_32"
                        android:layout_gravity="center"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCpu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_cpu"
                        android:textSize="12sp"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toEndOf="@+id/cardCpu"
                app:layout_constraintEnd_toStartOf="@+id/cardRam"
                app:layout_constraintTop_toBottomOf="@+id/textBtnShop"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_camera_32"
                        android:layout_gravity="center"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_camera"
                        android:textColor="@color/gray"
                        android:textSize="12sp"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardRam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toEndOf="@+id/cardCamera"
                app:layout_constraintEnd_toStartOf="@+id/cardSd"
                app:layout_constraintTop_toBottomOf="@+id/textBtnShop"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_ram_32"
                        android:layout_gravity="center"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_ram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_ram"
                        android:textColor="@color/gray"
                        android:textSize="12sp"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardRam"
                app:layout_constraintTop_toBottomOf="@+id/textBtnShop"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sd_card_32"
                        android:layout_gravity="center"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_sd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_sd"
                        android:textColor="@color/gray"
                        android:textSize="12sp"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/tv_select_color_and_capacity"
                android:textColor="@color/color_secondary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardCpu" />

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/btnRedColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_circle_red"
                android:minWidth="40dp"
                android:minHeight="40dp"
                android:layout_marginTop="20dp"
                android:textOff=""
                android:textOn=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSelect" />

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/btnBlackColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_circle_secondary"
                android:minWidth="40dp"
                android:minHeight="40dp"
                android:textOff=""
                android:textOn=""
                app:layout_constraintStart_toEndOf="@+id/btnRedColor"
                app:layout_constraintTop_toBottomOf="@id/tvSelect" />

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/btnMemorySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/sl_color_button"
                android:textOn="@string/btn_128_gb_on"
                android:textOff="@string/btn_128_gb_off"
                android:textColor="@color/dark_gray"
                android:checked="true"
                android:textAllCaps="false"
                android:minHeight="30dp"
                android:layout_marginRight="20dp"
                app:layout_constraintEnd_toStartOf="@+id/btnMemoryLarge"
                app:layout_constraintTop_toBottomOf="@id/tvSelect" />

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/btnMemoryLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/btn_256_gb_on"
                android:textOff="@string/btn_256_gb_off"
                android:textColor="@color/dark_gray"
                android:checked="false"
                android:textAllCaps="false"
                android:minHeight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/sl_color_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSelect" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMemoryAddToCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_new"
                android:text="Add to Cart        $1,500.00"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnRedColor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>